# snake-rust

./: Cargo.toml  index.html
src/: lib.rs  random.rs  snake.rs
