[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"

[dependencies.web-sys]
version = "0.3.57" 
features = [
    "Window", 
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlDivElement",
    "KeyboardEvent"
]